import "dataControllerUtils/TimeInterval.proto";
import "dataControllerUtils/DataId.proto";
import "dataControllerUtils/Action.proto";

package dataControllerUtils.protobuf;

message DataSubscribe {
extensions 14 to 107;
  optional Action action = 1;
  optional string id = 2;
  optional DataId dataId = 4;
}
