
import "Action.proto";
import "TimeInterval.proto";

package dataControllerUtils.protobuf;

//Message to set a time interval on a session for RealTime. All parameters with session_id will be filtered with time interval.
// (there can be several Timefilter with the same session_id, but not the same id)

message TimeFilterMessage {
extensions 15 to 107;

  optional Action action = 1;       
  optional uint32 id = 2;
  optional uint32 sessionId = 3;
  optional TimeInterval interval = 4;
}
